@@ -50,6 +50,7 @@ endif::[]
 
 - Allow underscores in hostnames in Net::HTTP spy {pull}804[#804]
 - Don't change log level on logger object via remote config {pull}809[#809]
+- Update and fix the Opentracing bridge {pull}791[#791]
 
 [float]
 [[release-notes-3.7.0]]
